fix(DatePicker): update Calendar overflow-y-auto

--- a/src/components/DatePicker/index.module.css
+++ b/src/components/DatePicker/index.module.css
@@ -12,12 +12,12 @@
 }
 
 .datePickerModal {
-  @apply absolute z-10 mt-1 flex flex-col bg-white border shadow-lg rounded-xl items-center lg:flex-row;
+  @apply absolute z-10 mt-1 flex flex-col bg-white border shadow-lg rounded-xl items-center overflow-y-auto lg:flex-row;
   composes: smallBold from '../../styles/typography.module.css';
 }
 
 .calendar {
-  @apply z-10 mt-1 flex flex-col bg-white border rounded-xl items-center overflow-y-scroll lg:flex-row pointer-events-none;
+  @apply z-10 mt-1 flex flex-col bg-white border rounded-xl items-center overflow-y-auto lg:flex-row pointer-events-none;
   composes: smallBold from '../../styles/typography.module.css';
 }
 
